# routes/itemRoutes.js
@@ -1,29 +1,28 @@
 const express = require('express');
 const router = express.Router();
-const Item = require('../models/Item');
+const User = require('../models/user'); 
 
 router.get('/', async (req, res) => {
   try {
-    const items = await Item.find();
-    res.status(200).json(items);
+    const users = await User.find(); 
+    res.status(200).json(users);
   } catch (error) {
     console.error(error);
     res.status(500).json({ error: 'Internal Server Error' });
   }
 });
 
-// POST a new item
 router.post('/', async (req, res) => {
   try {
-    const { name, quantity } = req.body;
-    if (!name || !quantity) {
+    const { username, displayName } = req.body; 
+    if (!username || !displayName) {
       return res.status(400).json({ error: 'Bad Request' });
     }
 
-    const item = new Item({ name, quantity });
-    await item.save();
+    const user = new User({ username, displayName });
+    await user.save();
 
-    res.status(201).json({ message: 'Item created successfully' });
+    res.status(201).json({ message: 'User created successfully' });
   } catch (error) {
     res.status(500).json({ error: 'Internal Server Error' });
   }
@@ -31,17 +30,17 @@ router.post('/', async (req, res) => {
 
 router.put('/:id', async (req, res) => {
   try {
-    const { name, quantity } = req.body;
-    if (!name && !quantity) {
+    const { username, displayName } = req.body; 
+    if (!username && !displayName) {
       return res.status(400).json({ error: 'Bad Request' });
     }
 
-    const updatedItem = await Item.findByIdAndUpdate(req.params.id, { name, quantity }, { new: true });
-    if (!updatedItem) {
-      return res.status(404).json({ error: 'Item not found' });
+    const updatedUser = await User.findByIdAndUpdate(req.params.id, { username, displayName }, { new: true });
+    if (!updatedUser) {
+      return res.status(404).json({ error: 'User not found' });
     }
 
-    res.status(200).json({ message: 'Item updated successfully', updatedItem });
+    res.status(200).json({ message: 'User updated successfully', updatedUser });
   } catch (error) {
     console.error(error);
     res.status(500).json({ error: 'Internal Server Error' });
@@ -50,12 +49,12 @@ router.put('/:id', async (req, res) => {
 
 router.delete('/:id', async (req, res) => {
   try {
-    const deletedItem = await Item.findByIdAndDelete(req.params.id);
-    if (!deletedItem) {
-      return res.status(404).json({ error: 'Item not found' });
+    const deletedUser = await User.findByIdAndDelete(req.params.id);
+    if (!deletedUser) {
+      return res.status(404).json({ error: 'User not found' });
     }
 
-    res.status(204).json({ message: 'Item deleted successfully' });
+    res.status(204).json({ message: 'User deleted successfully' });
   } catch (error) {
     console.error(error);
     res.status(500).json({ error: 'Internal Server Error' });
